Tied video to one element through constructor Added CSS to fix highlighting on mobile Added Timer class to fire on an interval

--- a/client/css/style.css
+++ b/client/css/style.css
@@ -16,3 +16,11 @@ html, body, #preview {
   right: 0;
   height: 100%;
 }
+
+svg > * {
+  cursor: default;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
